# exam-work-app

./: README.md  本地启动指南.md
admin/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
admin/src/: App.tsx
admin/src/api/: auth.ts  axios.ts  exams.ts  incidents.ts  reports.ts  site-standards.ts  sites.ts  source-schools.ts  staffs.ts  tasks.ts
admin/src/components/: Layout.tsx
admin/src/pages/: Dashboard.tsx  Exams.tsx  Incidents.tsx  Login.tsx  Reports.tsx  SiteStandards.tsx  Sites.tsx  SourceSchools.tsx  Staffs.tsx  Tasks.tsx
exam-admin-system/: README.md  pyproject.toml
exam-admin-system/app/: __init__.py  database.py  main.py
exam-admin-system/app/api/: __init__.py
exam-admin-system/app/api/routers/: exam_site.py  source_school.py  staff.py
exam-admin-system/app/models/: __init__.py  exam_site.py  source_school.py  staff.py
exam-admin-system/app/schemas/: __init__.py  exam_site.py  source_school.py  staff.py
exam-admin-system/tests/: __init__.py
mobile/: README.md  pubspec.yaml
mobile/lib/: main.dart
mobile/lib/config/: api_config.dart
mobile/lib/models/: exam.dart  user.dart
mobile/lib/pages/dashboard/: dashboard_page.dart
mobile/lib/providers/: auth_provider.dart
mobile/lib/routes/: app_routes.dart
mobile/lib/services/: api_client.dart  auth_service.dart  exam_service.dart
mobile/lib/theme/: app_theme.dart
server/: .env.example  database.sqlite  package-lock.json  package.json
server/src/: app.controller.ts  app.module.ts  main.ts
server/src/config/: env.ts
server/src/database/: data-source.ts
(+94 files in other folders)
